fix admin header spacing issue

--- a/app/css/less/admin-page.less
+++ b/app/css/less/admin-page.less
@@ -195,7 +195,7 @@ p .lightbox {
 
 .admin-header-container {
 	margin-top: 1%;
-	& > .nav-tabs {
+	& .nav-tabs {
 		margin-right: 0 !important;
 		margin-left: 0 !important;
 	}
@@ -214,7 +214,3 @@ p .lightbox {
 	width: 620px;
 	margin: auto;
 }
-
-/*.file-page-file-icon {
-	font-size: 10em;
-}*/
